--- a/src/dissertation_gui/main_window.ui
+++ b/src/dissertation_gui/main_window.ui
@@ -374,29 +374,6 @@
             <item>
              <layout class="QVBoxLayout" name="verticalLayout_9">
               <item>
-               <widget class="QLabel" name="label_3">
-                <property name="text">
-                 <string>Температура, °C</string>
-                </property>
-                <property name="wordWrap">
-                 <bool>true</bool>
-                </property>
-               </widget>
-              </item>
-              <item>
-               <widget class="QSpinBox" name="temp_spin_box">
-                <property name="minimum">
-                 <number>-50</number>
-                </property>
-                <property name="maximum">
-                 <number>100</number>
-                </property>
-                <property name="value">
-                 <number>25</number>
-                </property>
-               </widget>
-              </item>
-              <item>
                <widget class="QLabel" name="label_4">
                 <property name="text">
                  <string>Быстрота нагрева, °C/с</string>
@@ -407,20 +384,7 @@
                </widget>
               </item>
               <item>
-               <widget class="QDoubleSpinBox" name="k_spin_box">
-                <property name="minimum">
-                 <double>0.100000000000000</double>
-                </property>
-                <property name="maximum">
-                 <double>10.000000000000000</double>
-                </property>
-                <property name="singleStep">
-                 <double>0.100000000000000</double>
-                </property>
-                <property name="value">
-                 <double>1.000000000000000</double>
-                </property>
-               </widget>
+               <widget class="QComboBox" name="k_combo_box"/>
               </item>
              </layout>
             </item>
